# password-vault-pro

./: .gitignore  CONTRIBUTING.md  README.md  index.html  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
assets/: screenshot.html
src/: __init__.py  vault.py
tests/: __init__.py  test_vault.py
